# LoRaD

./: .gitignore  Dockerfile  Dockerfile_full  Dockerfile_upgrade  Dockerfile_upgrade_arm  README.md  full_install.sh  getver.sh  lorad.py  lorad_main.py  pyproject.toml  test.py  upgrade_install.sh
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/.cursor/rules/: angular.mdc
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/environments/: environment.prod.ts  environment.ts
lorad/api/: LoRadAPISrv.py  utils.py
lorad/api/endpoints/: __init__.py  apidoc.py  available_players.py  current_player.py  current_track.py  enabled_features.py  locale.py  openapi.py  switch_player.py  version.py  whatsplaying.py
lorad/api/orm/: Group.py  Token.py  User.py
lorad/api/utils/: apidoc.py  decorators.py  misc.py  openapi.py
lorad/audio/playback/: FileStreamer.py  RadReStreamer.py  RadioReStreamer.py
lorad/audio/programs/: GenericPrg.py  NewsPrgS.py  program_mgr.py
lorad/audio/server/: AudioStream.py  (+1 more)
lorad/database/: MySQL.py
lorad/music/: Connector.py
lorad/newsagency/: newsparser.py
lorad/programs/: GenericPrg.py  NewsPrgB.py  NewsPrgS.py  program_mgr.py
lorad/server/: LoRadSrv.py
lorad/stream/: Carousel.py  Streamer.py
lorad/utils/: logger.py  utils.py
lorad_radio/database/: MySQL.py
lorad_radio/music/: Connector.py
lorad_radio/programs/: GenericPrg.py  NewsPrgS.py  program_mgr.py
lorad_radio/server/: LoRadSrv.py
lorad_radio/stream/: Streamer.py
lorad_radio/utils/: utils.py
tests/api/: test_user_mgmt.py
(+99 files in other folders)
