[tool.poetry]
name = "lorad"
version = "0.0.5"
description = "Locchan's Radio"
authors = ["Jaroslaw Locchansky <locchansky@gmail.com>"]
packages = [{include = "lorad"}]

[tool.poetry.dependencies]
python = ">3.10,<3.12"
mutagen = "==1.47.0"
feedparser = "==6.0.11"
beautifulsoup4 = "==4.13.3"
openai = "==1.65.4"
google-cloud-texttospeech = "==2.25.0"
ffmpeg-python = "==0.2.0"
yandex-music = "==2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
